# puras

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/content-studio/: puras.yaml
examples/content-studio/content-repurposer/: SKILL.md  skill.yaml
examples/content-studio/content-repurposer/evals/: checks.py
examples/content-studio/content-repurposer/tools/: check_post.py
examples/hello-world/: AGENTS.md  LICENSE  README.md  puras.yaml
examples/hello-world/formatter/: skill.yaml
examples/hello-world/formatter/scripts/: format.py
examples/hello-world/greeter/: SKILL.md  skill.yaml
examples/hello-world/greeter/evals/: cases.jsonl
examples/hello-world/greeter/references/: poet.md
examples/hello-world/greeter/tools/: emphasize.py
examples/orchestration-bakeoff/: .gitignore  DESIGN.md  README.md
examples/orchestration-bakeoff/engine/: __init__.py  experiment.py  game.py  perturbations.py  protocol.py  scoring.py  words.py
examples/orchestration-bakeoff/harness/: __init__.py  one_game.py  puras_runner.py  replay.py  run_bakeoff.py
examples/orchestration-bakeoff/players/: __init__.py
examples/orchestration-bakeoff/players/langgraph_player/: __init__.py  naive_solver.py  react_solver.py  requirements.txt  solver_core.py
examples/orchestration-bakeoff/players/puras_player/: puras.yaml
examples/orchestration-bakeoff/players/puras_player/codebreaker/: SKILL.md  skill.yaml
examples/orchestration-bakeoff/players/puras_player/codebreaker/tools/: make_guess.py
examples/orchestration-bakeoff/results/: bakeoff-20260615-151001.json  bakeoff-20260615-151317.json
examples/orchestration-bakeoff/tests/: test_engine.py  test_langgraph_player.py  test_puras_tool.py
examples/self-improving-bakeoff/: DESIGN.md  README.md
examples/self-improving-bakeoff/contestants/: __init__.py  shared.py
examples/self-improving-bakeoff/contestants/langgraph_agent/: __init__.py  agent.py
examples/self-improving-bakeoff/contestants/puras_skill/: puras.yaml  runner.py
examples/self-improving-bakeoff/contestants/puras_skill/picky-copywriter/: SKILL.md  skill.yaml
examples/self-improving-bakeoff/contestants/puras_skill/picky-copywriter/tools/: recall.py  remember.py  submit_copy.py
examples/self-improving-bakeoff/harness/: __init__.py  bakeoff.py  validate.py
examples/self-improving-bakeoff/optimizer/: __init__.py  __main__.py  optimize.py
examples/self-improving-bakeoff/task/: __init__.py  client.py
examples/self-improving-bakeoff/tests/: test_task.py
examples/skillpack-template/: README.md
examples/skillpack-template/my-skill/: SKILL.md  skill.yaml
tests/: test_cli_llm_key.py  test_optimizer_core.py  test_packaging.py  test_smoke.py
tests/dry/: test_compression.py  test_eval_mocks.py  test_hindsight.py  test_local_deployments_root.py  test_local_drive_path.py  test_local_import_isolation.py  test_local_media.py  test_local_server.py  test_local_web.py  test_local_web_search.py  test_memory_sqlite.py
worker/: __init__.py  agent_runner.py  agent_tool_specs.py  analytics.py  approvals.py  attachments.py  browser.py  checkpoint.py  compression.py  config.py  db.py  deployment.py  drive.py  embeddings.py  eval_local.py  eval_mocks.py  eval_runner.py  event_ctx.py  function_runner.py  health.py  hindsight_core.py  llm_models.py  local_run.py  local_server.py  main.py  manifest.py  media_local.py  media_registry.py  media_verbs.py  memory.py  memory_store.py  memory_store_sqlite.py  optimizer_core.py  optimizer_local.py  pricing.py  proc_env.py  proc_limits.py  prompt_cache.py  queue.py  resources.py  (+8 more)
worker/providers/: __init__.py  anthropic_provider.py  base.py  openrouter_provider.py
worker/sdk/: README.md  pyproject.toml
worker/sdk/puras/: __init__.py  _client.py  client.py  drive.py  inputs.py  media.py  secrets.py  subagent.py
worker/sdk/puras/cli/: __init__.py  bundle.py  client.py  commands.py  config.py  template.py  ui.py
